--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Ph.D. candidate"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Wei Li"
 description              : &description "personal description"
 url                      : https://rebeccaislw.github.io/WeiLi/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -24,7 +24,7 @@ author:
   avatar           : "WL_photo_2.png"
   name             : "Wei Li"
   pronouns         : "she/her"
-  bio              : "Ph.D. candicate in economics"
+  bio              : "Ph.D. candicate in Economics"
   location         : "Amsterdam"
   employer         : #
   uri              : # URL
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # URL - Update with the correct link to your profile
   impactstory      : # URL
   orcid            : "https://orcid.org/0009-0006-4556-6253"
   semantic         : # URL
