--- a/_config.yml
+++ b/_config.yml
@@ -236,7 +236,7 @@ defaults:
       author_profile: true
   # _teaching
   - scope:
-      path: ""
+      path: "teaching"
       type: teaching
     values:
       layout: single
