--- a/_config.yml
+++ b/_config.yml
@@ -199,19 +199,19 @@ kramdown:
 
 
 # Collections
-collections:
+#collections:
  # teaching:
  #   output: true
  #   permalink: /:collection/:path/
-  publications:
-    output: true
-    permalink: /:collection/:path/
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
-  talks:
-    output: true
-    permalink: /:collection/:path/
+ # publications:
+ #   output: true
+ #   permalink: /:collection/:path/
+ # portfolio:
+ #   output: true
+ #   permalink: /:collection/:path/
+ # talks:
+  #  output: true
+  #  permalink: /:collection/:path/
 
 
 # Defaults
@@ -236,7 +236,7 @@ defaults:
       author_profile: true
   # _teaching
   - scope:
-      path: "teaching"
+      path: "_pages"
       type: teaching
     values:
       layout: single
