--- a/_config.yml
+++ b/_config.yml
@@ -199,14 +199,14 @@ kramdown:
 
 
 # Collections
-#collections:
+collections:
  # teaching:
  #   output: true
  #   permalink: /:collection/:path/
- # publications:
- #   output: true
- #   permalink: /:collection/:path/
- # portfolio:
+  publications:
+    output: true
+    permalink: /:collection/:path/
+  #portfolio:
  #   output: true
  #   permalink: /:collection/:path/
  # talks:
