--- a/_config.yml
+++ b/_config.yml
@@ -203,9 +203,9 @@ collections:
  # teaching:
  #   output: true
  #   permalink: /:collection/:path/
-  publications:
-    output: true
-    permalink: /:collection/:path/
+  #publications:
+   # output: true
+   # permalink: /:collection/:path/
   #portfolio:
  #   output: true
  #   permalink: /:collection/:path/
@@ -245,7 +245,7 @@ defaults:
       comments: true
   # _publications
   - scope:
-      path: ""
+      path: "_pages"
       type: publications
     values:
       layout: single
